--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.education">
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:label="education"
         android:name="${applicationName}"
@@ -27,8 +28,11 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
-        <meta-data
-            android:name="flutterEmbedding"
-            android:value="2" />
+             <meta-data
+             android:name="flutterEmbedding"
+             android:value="2" />
+             <meta-data
+             android:name="com.google.android.geo.API_KEY"
+             android:value="AIzaSyCoeqj9TJZAfNgdkgEZGL-swL7wrzO1Ucg" />
     </application>
 </manifest>
