--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   cupertino_icons: ^1.0.2
+  latlong2: ^0.9.1
   # Add other Firebase packages as per your requirements
 
 
