--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,12 +42,20 @@ dependencies:
   intl: ^0.19.0
   cupertino_icons: ^1.0.2
   latlong2: ^0.9.1
+  geolocator: ^11.0.0
+  flutter_launcher_icons: ^0.13.1
+  
   # Add other Firebase packages as per your requirements
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/images/LOGObgB.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
