--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # firebase
   firebase_core: ^2.30.1
   firebase_auth: ^4.19.4
+  firebase_analytics: ^10.10.5
   cloud_firestore: ^4.17.2
 
 
@@ -49,6 +50,8 @@ dependencies:
   # google_maps_flutter: ^2.6.1
   flutter_map_cancellable_tile_provider:
   geolocator: ^11.0.0
+  dio: ^5.4.3+1
+  cached_network_image: ^3.3.1
   # intl: ^0.18.1
   
 
