--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   latlong2: ^0.9.1
   location: ^6.0.1
   permission_handler: ^11.3.1
+  http: ^1.2.1
   # google_nav_bar: ^5.0.6
   # google_maps_flutter: ^2.6.1
   flutter_map_cancellable_tile_provider:
